gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/issue3827.d
version https://git-lfs.github.com/spec/v1
oid sha256:cdd54642f686b23525efdaab9467f5160e6b88aa6863ca8344d1d9ed6fcfb617
size 591
